--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node index.js",
-    "prestart":"tsc"
+    "start": "tsc-watch --onSuccess \" node dist/index.js\" "
   },
   "repository": {
     "type": "git",
@@ -17,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/biolet16/typechain/issues"
   },
-  "homepage": "https://github.com/biolet16/typechain#readme"
+  "homepage": "https://github.com/biolet16/typechain#readme",
+  "dependencies": {
+    "tsc-watch": "4.2.9"
+  }
 }
